package techstore.patterns.singleton;

public class ShoppingCartManager {
}
