@startuml TechStoreSingletonPattern

skinparam class {
    BackgroundColor<<Singleton>> LightBlue
    BackgroundColor<<Interface>> LightGreen
    BackgroundColor<<Observer>> LightYellow
}

class CatalogueManager <<Singleton>> {
    - instance: CatalogueManager
    - products: List<Product>
    - categories: List<Category>
    - nextProductId: int
    + getInstance(): CatalogueManager
    + getNextProductId(): int
    + addProduct(Product)
    + updateProduct(Product)
    + deleteProduct(int)
    + findProductById(int): Optional<Product>
    + getAllProducts(): List<Product>
    + findProductsByCategory(Category): List<Product>
    + addCategory(Category)
    + findCategoryByName(String): Optional<Category>
    + findCategoryById(int): Optional<Category>
    + getAllCategories(): List<Category>
}

class OrderManager <<Singleton>> {
    - instance: OrderManager
    - orders: List<Order>
    - notificationService: NotificationService
    + getInstance(): OrderManager
    + setNotificationService(NotificationService)
    + placeOrder(Order)
    + getAllOrders(): List<Order>
    + findOrderById(int): Optional<Order>
}

class UserManager <<Singleton>> {
    - instance: UserManager
    - users: List<User>
    - notificationService: NotificationService
    + getInstance(): UserManager
    + setNotificationService(NotificationService)
    + addUser(User)
    + findUserByUsername(String): Optional<User>
    + getAllUsers(): List<User>
}

class ShoppingCartManager <<Singleton>> {
    - instance: ShoppingCartManager
    + getInstance(): ShoppingCartManager
}

interface CatalogueService <<Interface>> {
    + addProduct(Product)
    + updateProduct(Product)
    + deleteProduct(int)
    + getNextProductId(): int
    + findProductById(int): Optional<Product>
    + getAllProducts(): List<Product>
    + findProductsByCategory(Category): List<Product>
    + addCategory(Category)
    + findCategoryByName(String): Optional<Category>
    + findCategoryById(int): Optional<Category>
    + getAllCategories(): List<Category>
}

class NotificationService <<Observer>> {
    + registerObserver(Observer)
    + removeObserver(Observer)
    + notifyObservers(String)
}

CatalogueService <|.. CatalogueManager
OrderManager --> NotificationService
UserManager --> NotificationService

note top of CatalogueManager
  <<Singleton>>
  • Manages all product/category data
  • Implements CatalogueService for Proxy
  • Thread-safe initialization
end note

note right of OrderManager
  <<Singleton>>
  • Handles order processing
  • Integrates Observer pattern
  • Notifies on new orders
end note

note left of UserManager
  <<Singleton>>
  • Manages user accounts
  • Notifies on new registrations
  • Provides user lookup
end note

@enduml